# SilverLingua

./: .gitignore  .main.py.251665179~  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
SilverLingua/: __init__.py  config.py  constants.py  util.py
SilverLingua/core/: __init__.py  agent.py
SilverLingua/core/agent/: agent.py
SilverLingua/core/atoms/: __init__.py  tokenizer.py
SilverLingua/core/atoms/memory/: __init__.py  idearium.py  link.py  memory.py  notion.py
SilverLingua/core/atoms/model/: __init__.py  model.py
SilverLingua/core/atoms/prompt/: __init__.py  prompt.py
SilverLingua/core/atoms/role/: __init__.py  chat.py  react.py  role.py
SilverLingua/core/atoms/roles/: __init__.py  chat.py  react.py  role.py
SilverLingua/core/atoms/tool/: __init__.py  tool.py  util.py
SilverLingua/core/compounds/model/: model.py
SilverLingua/core/molecules/: link.py  notion.py
SilverLingua/core/organisms/: idearium.py
SilverLingua/openai/: __init__.py
SilverLingua/openai/agent/: __init__.py  openaichat.py
SilverLingua/openai/atoms/: __init__.py
SilverLingua/openai/atoms/model/: __init__.py  openai.py  util.py
SilverLingua/openai/atoms/role/: __init__.py  chat.py
SilverLingua/openai/compounds/: openaichat.py
SilverLingua/openai/templates/agent/: __init__.py
SilverLingua/openai/templates/model/: __init__.py  openai.py
SilverLingua/search_tools/: __init__.py
SilverLingua/search_tools/google_search/: serper.py
api/: index.html
api/config/: index.html
api/core/atoms/: index.html
api/core/atoms/memory/: index.html
api/core/atoms/prompt/: index.html
api/core/atoms/role/: index.html
api/core/atoms/tokenizer/: index.html
api/core/atoms/tool/: index.html
api/core/molecules/: index.html
api/core/molecules/link/: index.html
api/core/molecules/notion/: index.html
api/core/organisms/: index.html
api/core/organisms/idearium/: index.html
api/core/templates/: index.html
api/core/templates/agent/: index.html
api/core/templates/model/: index.html
api/modules/anthropic/: index.html
api/modules/openai/: index.html
design-principles/: index.html
docs/: design-principles.md  index.md
docs/api/: config.md  index.md
docs/api/core/: decorators.md
docs/api/core/atoms/: index.md  memory.md  prompt.md  role.md  tokenizer.md  tool.md
docs/api/core/molecules/: index.md  link.md  notion.md
docs/api/core/organisms/: idearium.md  index.md
docs/api/core/templates/: agent.md  index.md  model.md
docs/api/modules/: anthropic.md  openai.md
docs/api/providers/: openai.md
docs/getting-started/: installation.md  quickstart.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/api/config/: index.html
site/api/core/: index.html
site/api/core/atoms/: index.html
site/api/core/atoms/memory/: index.html
site/api/core/atoms/prompt/: index.html
site/api/core/atoms/role/: index.html
site/api/core/atoms/tokenizer/: index.html
site/api/core/atoms/tool/: index.html
site/api/core/molecules/: index.html
site/api/core/molecules/link/: index.html
site/api/core/molecules/notion/: index.html
site/api/core/organisms/: index.html
site/api/core/organisms/idearium/: index.html
site/api/core/templates/: index.html
site/api/core/templates/agent/: index.html
site/api/core/templates/model/: index.html
site/api/modules/anthropic/: index.html
site/api/modules/openai/: index.html
site/api/providers/anthropic/: index.html
site/api/providers/openai/: index.html
site/design-principles/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/search/: search_index.json
src/SilverLingua/: __init__.py  util.py
src/SilverLingua/anthropic/: __init__.py
src/SilverLingua/anthropic/atoms/: __init__.py
src/SilverLingua/anthropic/atoms/role/: chat.py
src/SilverLingua/anthropic/templates/agent/: anthropic.py
src/SilverLingua/anthropic/templates/model/: __init__.py  anthropic.py  tokenizer.py  util.py
src/SilverLingua/core/: __init__.py
src/SilverLingua/core/atoms/: __init__.py  memory.py  prompt.py
src/SilverLingua/core/atoms/role/: __init__.py  chat.py  member.py  react.py
src/SilverLingua/core/atoms/tool/: __init__.py  decorator.py  tool.py  util.py
src/SilverLingua/core/molecules/: __init__.py  link.py  notion.py
src/SilverLingua/core/organisms/: __init__.py  idearium.py
src/SilverLingua/core/templates/: __init__.py  agent.py  model.py
src/SilverLingua/openai/: __init__.py
src/SilverLingua/openai/atoms/role/: __init__.py  chat.py
src/SilverLingua/search_tools/google_search/: __init__.py
src/search_tools/: __init__.py
src/search_tools/google_search/: serper.py
src/silverlingua_anthropic/atoms/role/: __init__.py  chat.py
src/silverlingua_anthropic/templates/agent/: __init__.py  anthropic.py
src/silverlingua_anthropic/templates/model/: anthropic.py  tokenizer.py
src/silverlingua_openai/: __init__.py
src/silverlingua_openai/atoms/role/: chat.py
src/silverlingua_openai/templates/agent/: openaichat.py
src/silverlingua_openai/templates/model/: openai.py
tests/: conftest.py  test_anthropic_api.py  test_anthropic_tokenizer.py  test_streaming_responses.py
tests/anthropic/: test_anthropic_api.py  test_anthropic_tokenizer.py
tests/core/: test_core.py
tests/core/atoms/: test_memory.py  test_prompt.py  test_role.py  test_tokenizer.py  test_tool.py
tests/core/molecules/: test_link.py  test_notion.py
tests/core/organisms/: test_idearium.py
tests/core/templates/: __init__.py  test_agent.py  test_model.py
tests/openai/: test_streaming_responses.py
(+1 files in other folders)
