[tool.poetry]
name = "silverlingua"
version = "1.0.0"
description = "An AI agent framework"
authors = ["Travis Baldwin <travis@voidtavern.dev>"]
packages = [
    {include = "SilverLingua", from = "src"},
    {include = "silverlingua_openai", from = "src"},
    {include = "silverlingua_anthropic", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.13.0,<3.14"
jinja2 = "3.1.2"
loguru = "0.7.2"
tiktoken = "^0.5.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"

# Optional provider dependencies
openai = {version = "^1.3.5", optional = true}
anthropic = {version = "^0.40.0", optional = true}

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
all = ["openai", "anthropic"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-dependency = "^0.5.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.47"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}

[tool.pytest.ini_options]
addopts = "-v -ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    # Core component hierarchy
    "core: mark a test as a core component test",
    "atoms: mark a test as an atomic component test",
    "molecules: mark a test as a molecular component test",
    "organisms: mark a test as an organism component test",
    "templates: mark a test as a template component test",
    # Provider-specific tests
    "openai: mark tests that require openai package",
    "anthropic: mark tests that require anthropic package",
    # Specific component types
    "memory: memory component tests",
    "tokenizer: tokenizer component tests",
    "tool: tool component tests", 
    "prompt: prompt component tests",
    "role: role component tests",
    "notion: notion component tests",
    "link: link component tests",
    "idearium: idearium component tests",
    "model: model component tests",
    "agent: agent component tests",
    # Test types
    "unit: unit tests",
    "integration: integration tests",
    "streaming: streaming functionality tests",
    "async: asynchronous functionality tests"
]

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"